[tool.poetry]
name = "color-contrast"
version = "0.1.0"
description = ""
authors = ["Julian Leucker <leuckerj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colour = "^0.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
