[tool.poetry]
name = "color-contrast"
version = "0.1.1"
description = "Python library to calculate and modulate color contrasts according to WCAG2.1"
authors = ["Julian Leucker <leuckerj@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/ZugBahnHof/color-contrast"
keywords = ["color", "colour", "accessibility", "wcag", "wcag2.1"]

[tool.poetry.dependencies]
python = "^3.10"
colour = "^0.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
